<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SigninActivity"
    android:gravity="center">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        tools:ignore="MissingConstraints,UselessParent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/blogger_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blogger_text"
            android:textColor="@color/deep_sky_blue"
            android:textSize="30sp"
            android:fontFamily="@font/batman"
            android:layout_marginBottom="24dp" />

        <!-- Email Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signin_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:elevation="3dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/login_email_text" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signin_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:elevation="3dp"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/login_password_text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            app:elevation="3dp"
            android:text="@string/login_text"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/link_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/dont_have_acc_text"
            android:gravity="center"
            android:textSize="16sp"/>

        <RelativeLayout
            android:id="@+id/or_separator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/left_line"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/gray"
                android:layout_toStartOf="@id/or_text"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_centerVertical="true"/>

            <TextView
                android:id="@+id/or_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or_separator_text"
                android:layout_centerHorizontal="true"/>

            <View
                android:id="@+id/right_line"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/gray"
                android:layout_toEndOf="@id/or_text"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

        <ImageButton
            android:id="@+id/google_signin"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/google_icon"
            android:contentDescription="@string/google_login_descr" />

    </LinearLayout>

</RelativeLayout>