<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SplashScreen">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/splash_blogger_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/splash_blogger_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:fontFamily="@font/batman"
            android:textColor="@color/deep_sky_blue"
            android:textSize="40sp"
            android:gravity="center_horizontal"
            android:layout_centerInParent="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/splash_version_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/deep_sky_blue"
            android:gravity="center_horizontal"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="50dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/splash_developer_text"
            android:textColor="@color/dark_gray"
            android:fontFamily="casual"
            android:gravity="center_horizontal"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>