<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="2dp">

    <ImageView
        android:id="@+id/comment_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        tools:ignore="ContentDescription"
        android:src="@drawable/ic_account_circle_black_24dp"/>

    <com.daasuu.bl.BubbleLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        app:bl_arrowHeight="8dp"
        app:bl_arrowPosition="5dp"
        android:layout_toEndOf="@id/comment_image"
        android:layout_alignTop="@id/comment_image"
        app:bl_bubbleColor="@color/about_twitter_color"
        app:bl_cornersRadius="8dp"
        tools:ignore="RtlSymmetry">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/comment_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="0dp"
                android:text="@string/username_text"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/comment_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/comment_here_text"
                />

            <TextView
                android:id="@+id/comment_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/comment_time_text"
                android:textSize="10sp"
                android:textColor="@color/white"
                tools:ignore="SmallSp"
                android:layout_gravity="end"/>
        </LinearLayout>
    </com.daasuu.bl.BubbleLayout>
</RelativeLayout>