<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#dcdcdc"
    android:paddingBottom="5dp"
    android:paddingTop="5dp"
    android:id="@+id/blog_item">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/blog_like"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/blogDescription"
                app:srcCompat="@drawable/action_like_btn_gray"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/blog_comment"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="232dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/blogDescription"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@drawable/ic_comment"
                app:tint="@color/slate_gray"
                tools:ignore="ContentDescription" />

            <!--<ImageView
                android:id="@+id/commentProfilePic"
                android:layout_width="69dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_account_circle_black_24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />-->

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/postProfilePic"
                android:layout_width="69dp"
                android:layout_height="50dp"
                android:layout_marginStart="6dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_account_circle_black_24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/white" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/postUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="16dp"
                android:text="@string/username_row_text"
                android:textColor="#2a2929"
                android:textStyle="normal"
                android:textSize="18sp"
                app:fontFamily="@font/concert_one_regular"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintStart_toEndOf="@+id/postProfilePic"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/postDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/post_date_text"
                android:textSize="12sp"
                app:fontFamily="@font/cabin_condensed_regular"
                app:layout_constraintStart_toEndOf="@+id/postProfilePic"
                app:layout_constraintTop_toBottomOf="@+id/postUsername" />

            <View
                android:id="@+id/top_view"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                app:layout_constraintTop_toBottomOf="@+id/postDate"/>

            <ImageView
                android:id="@+id/postImage"
                android:layout_width="0dp"
                android:layout_height="204dp"
                android:layout_marginTop="8dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/postProfilePic"
                app:srcCompat="@drawable/image_placeholder"
                tools:ignore="ContentDescription"
                app:elevation="3dp" />

            <View
                android:id="@+id/bottom_view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@+id/postImage"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/blogDescription"
                android:layout_width="359dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="18dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="12dp"
                android:text="@string/post_content_text"
                android:textColor="#002863"
                android:textSize="15sp"
                app:fontFamily="@font/cabin_condensed_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bottom_view" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/blog_like_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:text="@string/post_likes_text"
                android:textColor="@color/gray"
                android:textStyle="bold"
                app:fontFamily="@font/cabin_condensed_regular"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/blog_like"
                app:layout_constraintTop_toBottomOf="@+id/blogDescription"
                app:layout_constraintVertical_bias="1.0" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/blog_comment_count"
                android:layout_width="121dp"
                android:layout_height="19dp"
                android:layout_marginBottom="12dp"
                android:layout_marginStart="228dp"
                android:layout_marginTop="8dp"
                android:text="@string/post_comments_text"
                android:textColor="@color/gray"
                android:textStyle="bold"
                app:fontFamily="@font/cabin_condensed_regular"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/blog_like"
                app:layout_constraintTop_toBottomOf="@+id/blogDescription"
                app:layout_constraintVertical_bias="0.692" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>